--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>rajbos</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, </h1>
-				<p></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/rajbos">github.com/rajbos</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Rob
+---
+<div class="blurb">
+	<h1>Hi there, I'm Rob!</h1>
+	<p></p>
+</div><!-- /.blurb -->
