--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 layout: default
 title: Rob
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Rob!</h1>
-	<p></p>
-</div><!-- /.blurb -->
+<h1>{{ page.title }}</h1>
+<ul class="posts">
+
+  {% for post in site.posts %}
+    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
