--- a/testing/index.html
+++ b/testing/index.html
@@ -22,13 +22,13 @@
 <!-- styles -->
 <link href="../css/style.css" rel="stylesheet">
 
-
 </head>
 
 
 <body>   
+    <div class="content">
     <div class="container"> 
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-default">
                 <div class="container-fluid">
                   <!-- Brand and toggle get grouped for better mobile display -->
                   <div class="navbar-header">
@@ -50,9 +50,8 @@
                 </div><!-- /.container-fluid -->
               </nav>
     </div>
-    <div class="container">
+    <div class="container ">
 
-            <h1>Robs blog</h1>
         <div class="posts">
 
 
@@ -136,6 +135,7 @@
         </div>
 
         </div>
+    </div>
 </body>
     
 </html>
