--- a/testing/index.html
+++ b/testing/index.html
@@ -20,7 +20,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!-- styles -->
-<link href="/css/style.css" rel="stylesheet">
+<link href="../css/style.css" rel="stylesheet">
 
 <!-- google analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -38,8 +38,8 @@ gtag('config', 'UA-111364229-1');
 
 <body>
     
-    <div class="container"> 
-        <nav class="navbar navbar-inverse">
+    <div class=""> 
+        <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
