removed all hardcoded link and making them root based referrel links

--- a/testing/index.html
+++ b/testing/index.html
@@ -49,7 +49,7 @@ gtag('config', 'UA-111364229-1');
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand active" href="https://devopsjournal.io/">Robs blog</a>
+                <a class="navbar-brand active" href="/">Robs blog</a>
                 </div>
             
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,7 +57,7 @@ gtag('config', 'UA-111364229-1');
                 <ul class="nav navbar-nav">
                     <li><a href="https://github.com/rajbos/" target="_blank">Github</a></li>						
                     <li><a href="https://twitter.com/robbos81/" target="_blank">Twitter</a></li>   
-                    <li><a href="https://devopsjournal.io/blog/atom.xml" target="_blank">RSS</a></li>                    
+                    <li><a href="/blog/atom.xml" target="_blank">RSS</a></li>                    
                 </ul>                    
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
