--- a/index.html
+++ b/index.html
@@ -29,3 +29,5 @@ title: Robs blog
 
 <!-- Mailchimp integration -->
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/44224779b75959b4acc700ecc/499cb601a6107dc6a8adc53a5.js");</script>
+<!-- Mastodon verification url-->
+<div style="display:none"><a rel="me" href="https://mstdn.social/@Rob_Bos">Mastodon</a></div>
